plugins {
    id 'java'
    id 'application'
    id 'com.github.johnrengelman.shadow' version '7.1.1'
}

group 'app'
version '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    mainClassName = 'AutoCodeApplication'
}

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.0'
}

dependencies {
    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")

    implementation 'software.amazon.awscdk:aws-cdk-lib:2.93.0'
    implementation 'software.constructs:constructs:10.3.0'
    implementation 'software.amazon.awssdk:rds:2.21.20'
    implementation 'software.amazon.awssdk:regions:2.21.20'
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

test {
    useJUnitPlatform()
}

shadowJar {
    archiveBaseName.set('app')
    archiveClassifier.set('')
    archiveVersion.set('1.0-SNAPSHOT')
    manifest {
        attributes 'Main-Class': 'AutoCodeApplication'
    }
}

tasks.named('jar') {
    enabled = false
}

tasks.named('distZip') {
    dependsOn tasks.named('shadowJar')
}

tasks.named('distTar') {
    dependsOn tasks.named('shadowJar')
}

tasks.named('startScripts') {
    dependsOn tasks.named('shadowJar')
}

build {
    dependsOn tasks.named('shadowJar')
}
